2004-07-25  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b65

	* Fix: In some strange permission sets we got non fitting error messages.
	  - When upload_tmp_dir is not in open_basedir
	  - When userdir and /or files in it are is not writeable.

2004-07-24  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b64

        * Fix: Redirect in multi_create_user didnt worked after successfull adding.
               Reason: doctype header was set before redirect header.

2004-07-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b63

	* Fix: Skins will be ignored when embedded.  This was causing a lot
	  of display issues for users due to skin colors conflicting with
	  embedding-system colors.

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b62

        * Fix?: Revert an earlier checkin (b100?) that prevented a PHP notice
          when first loading sessions while embedded.  Some users report not
          getting a session at all in postnuke.  Since postnuke was the original
          problem, I'm confused, but this will work.  Supressing the notice using
          @session_start()

2004-07-22  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.5-cvs-b61

	* html_wrap/inline_imagewrap.inc: Removed showstopping typo

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b60

        * Change: Remove the != SUNOS line from lib/lang.php
          We're under the assumption that it was added based on a bogus
          bug report some time ago because all docs (and user reports)
          claim that the LANG= line is necessary.

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b59

	* Fix: Missing ]

2004-07-22 Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b58

	* Fix: Show Album Summary only if it exists.

	* Fix: wrong html around Album Summary.

	* Fix: Correct .vassummary class for all skins.

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b57

	* Change: Better handling of the onsubmit/double-clicking issue