@@ -1,3 +1,8 @@
+2004-07-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b66
+
+	* Change: Remove bastard newlines from delete_user and delete_album that were causing
+	  jscript errors in Firefox.
+
 2004-07-25  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b65
 
 	* Fix: In some strange permission sets we got non fitting error messages.
